--- a/Lessons/11_Part1_CraftingReports.Rmd
+++ b/Lessons/11_Part1_CraftingReports.Rmd
@@ -65,10 +65,20 @@ See: <https://rmarkdown.rstudio.com> and class recording.
 
 <Fill in our discussion below with bullet points. Use italics and bold for emphasis (hint: use the cheat sheets or `Help` →`Markdown Quick Reference` to figure out how to make bold and italic text).> 
 
+* it's written in **text**
+* place to both *write* and *integrate* code
+* generate PDFs of code 
+* integrate with Git and GitHub for version control
+
 
 ## TEXT EDITING CHALLENGE
 
 Create a table below that details the example datasets we have been using in class. The first column should contain the names of the datasets and the second column should include some relevant information about the datasets. (Hint: use the cheat sheets to figure out how to make a table in Rmd)
+
+Dataset Names | Relevant Information
+------------- | -------------
+NEON_Litterfall | Mass data for plant functional groups from  individual sampling bouts.
+EPAair_PM25andO3 | Data from EPA. Columns include Pollutant, Year, and Geographic Area.
 
 
 ## R CHUNK EDITING CHALLENGE
@@ -76,6 +86,10 @@ Create a table below that details the example datasets we have been using in cla
 ### Installing packages
 
 Create an R chunk below that installs the package `knitr`. Instead of commenting out the code, customize the chunk options such that the code is not evaluated (i.e., not run).
+
+```{r Installing, eval=FALSE}
+install.packages("knitr")
+```
 
 
 ### Setup
@@ -86,6 +100,31 @@ Load the NTL-LTER_Lake_Nutrients_Raw dataset, display the head of the dataset, a
 
 Customize the chunk options such that the code is run but is not displayed in the final document.
 
+```{r Setup, message = FALSE, include = FALSE}
+getwd()
+
+library(tidyverse)
+library(lubridate)
+library(knitr)
+
+#set theme
+my_theme09 <- theme_classic(base_size = 12) +
+  theme(axis.text = element_text(color = "black"),
+  legend.position = "right")
+theme_set(my_theme09)
+
+#read in data
+NTL_LTER <- read.csv("../Data/Raw/NTL-LTER_Lake_Nutrients_Raw.csv",stringsAsFactors = TRUE)
+
+#display head
+head(NTL_LTER)
+
+#set date column to date format
+NTL_LTER$sampledate<- as.Date(NTL_LTER$sampledate, format = "%m/%d/%y")
+
+class(NTL_LTER$sampledate)
+
+```
 
 ### Data Exploration, Wrangling, and Visualization
 
@@ -95,9 +134,38 @@ Create an R chunk below to create a processed dataset do the following operation
 -   Include only surface samples (depth = 0 m)
 -   Drop rows with missing data
 
+```{r}
+NTL_LTER
+
+NTL_LTER_filter<-NTL_LTER %>% 
+ select(lakename:sampledate, depth:po4)%>%
+  filter(depth %in% 0)%>%
+  drop_na()
+
+```
+
+
 Create a second R chunk to create a summary dataset with the mean, minimum, maximum, and standard deviation of total nitrogen concentrations for each lake. Create a second summary dataset that is identical except that it evaluates total phosphorus. Customize the chunk options such that the code is run but not displayed in the final document.
 
+```{r}
+NTL_LTER_summary<-NTL_LTER_filter%>%
+  group_by(lakename)
+  summarise(mean = mean(tn_ug),
+            minimum = min(tn_ug),
+            maximum = max(tn_ug),
+            sd = (tn_ug)
+            )
+
+  NTL_LTER_summary
+
+```
+
+
 Create a third R chunk that uses the function `kable` in the knitr package to display two tables: one for the summary dataframe for total N and one for the summary dataframe of total P. Use the `caption = " "` code within that function to title your tables. Customize the chunk options such that the final table is displayed but not the code used to generate the table.
+
+```{r}
+
+```
 
 Create a fourth and fifth R chunk that generates two plots (one in each chunk): one for total N over time with different colors for each lake, and one with the same setup but for total P. Decide which geom option will be appropriate for your purpose, and select a color palette that is visually pleasing and accessible. Customize the chunk options such that the final figures are displayed but not the code used to generate the figures. In addition, customize the chunk options such that the figures are aligned on the left side of the page. Lastly, add a fig.cap chunk option to add a caption (title) to your plot that will display underneath the figure.
 
